# Game_Dev_R-type

./: .gitignore  CMakeLists.txt  run.sh
client/: CMakeLists.txt
client/include/: App.h  Game.h  Menu.h  background.h  cScreen.h  cTexture.h  constants.h  data.hpp  enemy.h  entity.h  loadTextures.h  missile.h  network.hpp  player.h  playerTextures.h  screens.h
client/src/: App.cpp  Game.cpp  Menu.cpp  background.cpp  cTexture.cpp  client.cpp  data.cpp  enemy.cpp  loadTextures.cpp  main.cpp  missile.cpp  network.cpp  player.cpp  playerTextures.cpp
common/include/rtype_common/: protocol.hpp  sublib1.h
common/src/: protocol.cpp  sublib1.cpp
server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
server/include/: game.hpp  room.h  server.h  server.hpp  session.h  structdata.h  timer.hpp
server/origin/: main.cpp
server/src/: main.cpp  participant.h  room.cpp  server.cpp  targetver.h
testClient/: CMakeLists.txt
testClient/src/: main.cpp
